# sqlite-wikipedia-revision-exporter

./: .gitignore  Cargo.toml  README.md
src/: main.rs
