[package]
name = "sqlite-wikipedia-revision-exporter"
version = "0.1.0"
edition = "2021"
authors = [ "Actual Genius Intellectual" ]

[dependencies]
rusqlite = "0.31.0"
csv = "1.3.0"
serde = { version = "1.0.197", features = ["derive"] }
dotenv = "0.15.0"
env_logger = "0.11.2"
log = "0.4.20"
chrono = "0.4.34"